[project]
name = "qwen-mcp-server"
version = "0.1.0"
description = "Qwen MCP Server implementation in Python"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "mcp>=1.13.1",
    "websockets>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
qwen-mcp-server = "qwen_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen_mcp_server"]