[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-mcp-server"
version = "0.1.0"
description = "Qwen MCP Server for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "jun-a"}
]
dependencies = [
    "mcp>=1.0.0",
    "websockets>=15.0.1",
]

[project.scripts]
qwen-mcp-server = "qwen_mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]